# Facturx-Pret

./: .env.example  .gitignore  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: main.py
api/app/api/v1/: router.py
api/app/api/v1/endpoints/: health.py  invoice.py
api/app/core/: config.py
api/app/models/: invoice.py
api/app/services/: pdf_generator.py  xml_generator.py
api/app/services/parsers/: __init__.py  ai_fallback.py  base.py  csv_parser.py  excel_parser.py  image_parser.py  mt940_parser.py  pdf_parser.py  xml_parser.py
deploy/nginx/: facturx-pret.conf
web/: Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/messages/en/: generator.json  landing.json  legal.json
web/messages/fr/: generator.json  landing.json  legal.json
web/public/: manifest.json  robots.txt
web/src/: i18n.ts
web/src/app/: globals.css  layout.tsx  sitemap.ts
web/src/app/[locale]/: layout.tsx  page.tsx
web/src/app/[locale]/cgv/: page.tsx
web/src/app/[locale]/confidentialite/: page.tsx
web/src/app/[locale]/contact/: page.tsx
web/src/app/[locale]/generator/: page.tsx
web/src/app/[locale]/mentions-legales/: page.tsx
web/src/components/ui/: Footer.tsx  LanguageSwitcher.tsx
web/src/config/: index.ts
web/src/i18n/: config.ts  navigation.ts
web/src/lib/: api.ts
web/src/types/: invoice.ts
